--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barışalım mı? 🤍</title>
+    <title>evlenekkmii 🤍</title>
     <style>
         * {
             margin: 0;
@@ -331,4 +331,5 @@
         }
     </script>
 </body>
+
 </html>
